--- a/manifest.json
+++ b/manifest.json
@@ -3,18 +3,19 @@
     "name": "QR",
     "icons": [
         {
-            "src": "qrCode.png",
+            "src": "qr-code.png",
             "type": "image/png",
             "sizes": "192x192"
         },
         {
-            "src": "qrCode.png",
+            "src": "qr-code.png",
             "type": "image/png",
             "sizes": "512x512"
         }
     ],
-     "start_url": "https://ijaved85.github.io/QrCode/index.html",
-    //"start_url": "http://localhost:8158/Coc/index.html",
-    "display": "standalone",
-    "theme_color": "#000112"
+    "start_url": "https://ijaved85.github.io/QrCode/index.html",
+    "display": "fullscreen",
+    "theme_color": "#000000",
+    "background_color": "#000000"
 }
+
