--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
             "sizes": "512x512"
         }
     ],
-    "start_url": "https://ijaved85.github.io/QrCode/index.html",
+    "start_url": "https://qr.smokescreen.co.in/",
     "display": "fullscreen",
     "theme_color": "#000000",
     "background_color": "#000000"
